--- a/index4.3.html
+++ b/index4.3.html
@@ -35,24 +35,27 @@
             <h1> Dream Big</h1>
             <h4> Become a web developer</h4>
             <p> I anmd Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt in, blanditiis numquam ipsum saepe culpa placeat quis nam, fugit accusamus, earum velit? Consequatur, rerum ex? Excepturi velit nostrum rerum pariatur!</p>
-            <Download class="link-button" target="_blank" href="google.com">
+            <a class="link-button" target="_blank" href="google.com">
                 Download Resume</a>
         </div>
     </section>
 
     <section class="experience-area">
-        <h3> Experiences</h3>
-        <div class="half-width3">
+        <h2> Experiences</h2>
+        <div id="full-stuck" class="half-width3 single-experience">
             <h2> Full Stack Web Developer</h2>
             <h5 class="name-highlight"> 2021-Present | Pro Level Developer</h5>
             <P> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam cupiditate fuga hare! Explicabo.</P>
         </div>
-        <div class="half-width3">
+        <div id="baby" class="half-width3 single-experience">
             <h2> Baby Web Developer</h2>
             <h5 class="name-highlight"> 2021-Present | Baby Web Developer</h5>
             <P> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam cupiditate fuga harumraaliquitempore! Explicabo.</P>
         </div>
     </section>
+    <footer>
+        <p class="foot"> © Don't irratate without reasons</p>
+    </footer>
 </body>
 
 </html>
